--- a/Views/home.html
+++ b/Views/home.html
@@ -57,10 +57,9 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-
             <div class="col-md-5" ng-app="left_func">
                 <div id="leftArrow"><a href="javascript:;" title="好友&文件"></a></div>
-                <div id="friend_file">
+                <div class="friend-file" id="friend_file">
                     <tabset justified="true">
                         <tab heading="好友">
                             <div class="col-md-12" style="height: 300px;">
@@ -79,13 +78,13 @@
                     </tabset>
                 </div>
                 <div id="leftvideo"><a href="javascript:;" title="好友&文件"></a></div>
-                <div class="col-md-12" id="sharevideo" style="border: 1px solid;height: 280px;">
+                <div class="col-md-12" id="sharevideo">
                     <label for="Video">视频区:</label>
                     <div class="video"></div>
                 </div>
             </div>
-            <div class="col-md-7">
-                <div class="col-md-8" id="whiteboard" style="border: 1px solid;height: 650px;">
+            <div class="col-md-7 main_area">
+                <div class="col-md-8" id="whiteboard" style="height: 650px;">
                     <img id="preview-image"  style="position: absolute; top:0; left: 15px;z-index:91;">
                     <div id="elementToShare" contenteditable style="height: 650px;width: 490px;">
                         <div style="margin-left: 25%;">
@@ -142,7 +141,7 @@
                     </div>
                 </div>
                 <div id="rightArrow"><a href="javascript:;" title="聊天"></a></div>
-                <div class="col-md-4" id="floatchat" style="border: 1px solid;height: 650px;">
+                <div class="col-md-4" id="floatchat" style="height: 650px;">
                     <input type="text" id="input-text-chat" class="form-control" disabled placeholder="输入文字 Enter发送" style="position: absolute;bottom: 0;width: 90%;">
                     <div class="chat-output"></div>
                 </div>
