--- a/Views/home.html
+++ b/Views/home.html
@@ -43,6 +43,7 @@
                         </div>
                         <button type="button"  id="open" class="btn btn-primary">创建</button>
                         <button type="button" id="join" class="btn btn-info">加入</button>
+                        <button type="button" id="invite" class="btn btn-info">邀请加入房间</button>
                     </form>
                     <form class="navbar-form navbar-right">
                         <div class="form-group input-group">
