动画效果 chatting_animation(css,js)文件修改
(cherry picked from commit 1bc169b73bdfa9527ca7957f0ad00bfce4748845)

--- a/Views/home.html
+++ b/Views/home.html
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div id="rightArrow"><a href="javascript:;" title="聊天"></a></div>
-                <div class="col-md-4" id="floatchat" style="height: 650px;">
+                <div class="col-md-4" id="floatchat" style="height: 650px;background:#EFEFF4;">
                     <input type="text" id="input-text-chat" class="form-control" disabled placeholder="输入文字 Enter发送" style="position: absolute;bottom: 0;width: 90%;">
                     <div class="chat-output"></div>
                 </div>
@@ -164,7 +164,6 @@
     <script src="https://cdn.webrtc-experiment.com/RTCMultiConnection.js"></script>
     <script src="https://cdn.webrtc-experiment.com/FileBufferReader.js"></script>
     <script src="/function/js/share.js"></script>
-
     <script src="/pdfShow/pdf.js"></script>
 </body>
 
