--- a/public/function/css/style.css
+++ b/public/function/css/style.css
@@ -18,5 +18,82 @@ video {
     width: 50%;
 
 }
-
-  
+/*The guest*/
+section.service{
+    float:left;
+}
+section.service>div{
+    max-width: 225px;
+    display: inline-block;
+    position:relative;
+    padding:8px;
+    margin:0 20px 0 10px;
+    border-radius:10px;
+    background-color:rgba(167, 219, 221, 0.66);
+    background-image:-moz-linear-gradient(hsla(0,0%,100%, 0.6), hsla(0, 0%, 100%, 0)  30px);
+    background-image:-webkit-gradient(linear, 0 0, 0 30, from(hsla(0, 0%, 100%, 0.6)), to(hsla(0, 0%, 100%, 0)));
+    -moz-box-shadow:1px 1px 2px hsla(0, 0%, 0%, 0.3);
+    -webkit-box-shadow:1px 1px 2px hsla(0, 0%, 0%, 0.3);
+    box-shadow:1px 1px 2px hsla(0, 0%, 0%, 0.3);
+    vertical-align: top;
+}
+section.service>div:before{
+    content:"";
+    position: absolute;
+    left: -5px;
+    top: 4px;
+    width: 0;
+    height: 0;
+    border-width:0 7px 4px 0;
+    border-style:solid;
+    border-color:transparent rgba(167, 219, 221, 0.66) transparent transparent;
+}
+.service>span{
+    max-width: 45px;
+    height: 36px;
+    font-weight:normal;
+    font-size:14px;
+    color:#999;
+    overflow: hidden;
+    float: left;
+}
+/*user*/
+section.user{
+    float:right;
+    text-align:right;
+}
+section.user>div{
+    max-width: 225px;
+    display: inline-block;
+    position:relative;
+    padding:8px;
+    margin:0 20px 0 10px;
+    border-radius:10px;
+    background-color:rgba(167, 219, 221, 0.66);
+    background-image:-moz-linear-gradient(hsla(0,0%,100%, 0.6), hsla(0, 0%, 100%, 0)  30px);
+    background-image:-webkit-gradient(linear, 0 0, 0 30, from(hsla(0, 0%, 100%, 0.6)), to(hsla(0, 0%, 100%, 0)));
+    -moz-box-shadow:1px 1px 2px hsla(0, 0%, 0%, 0.3);
+    -webkit-box-shadow:1px 1px 2px hsla(0, 0%, 0%, 0.3);
+    box-shadow:1px 1px 2px hsla(0, 0%, 0%, 0.3);
+    vertical-align: top;
+}
+section.user>div:before{
+    content:"";
+    position: absolute;
+    right: -5px;
+    top: 4px;
+    width: 0;
+    height: 0;
+    border-width:0 0 4px 7px;
+    border-style:solid;
+    border-color:transparent transparent transparent rgba(167, 219, 221, 0.66);
+}
+.user>span{
+    max-width: 45px;
+    height: 30px;
+    font-weight:normal;
+    font-size:12px;
+    color:#999;
+    overflow: hidden;
+    float: right;
+}
