--- a/public/function/css/style.css
+++ b/public/function/css/style.css
@@ -18,6 +18,7 @@
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
     padding: 12px;
     position: relative;
+    height: 75%;
 }
 #floatchat{
     display:-webkit-box;
